Add scheduling configuration options to environment template

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,10 @@ LOG_LEVEL=INFO
 # Web UI Settings (optional)
 WEB_HOST=localhost
 WEB_PORT=5000
+
+# Scheduling Settings (for scheduled mode)
+SCHEDULE_INTERVAL_MINUTES=30  # How often to scrape (in minutes)
+SCHEDULE_START_TIME=09:00     # Start time (24-hour format, optional)
+SCHEDULE_END_TIME=18:00       # End time (24-hour format, optional)
+SCHEDULE_DAYS_OF_WEEK=0,1,2,3,4,5,6  # Days to run (0=Monday, 6=Sunday)
+SCHEDULE_MAX_RUNS_PER_DAY=10  # Maximum runs per day (0 = unlimited)
