--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,38 @@
+# Core dependencies
 telethon==1.34.0
 python-dotenv==1.0.0
-pytest==7.4.3
+
+# Web framework
 flask==3.0.0
 flask-cors==4.0.0
+
+# Testing
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-asyncio==0.21.1
+
+# Enhanced logging and monitoring
+structlog==23.1.0
+colorama==0.4.6
+
+# Performance and async
+aiohttp==3.8.5
+asyncio-throttle==1.0.2
+
+# Database enhancements
+sqlalchemy==2.0.19
+alembic==1.12.0
+
+# Security
+cryptography==41.0.4
+
+# Development tools
+black==23.7.0
+flake8==6.0.0
+mypy==1.5.1
+
+# Optional: Redis for caching
+redis==4.6.0
+
+# Optional: Prometheus metrics
+prometheus-client==0.17.1
