fix(docker-compose): change web UI port mapping from 5000:5000 to 5001:5000 to avoid conflicts refactor(docker-compose): reorganize networks and volumes sections for better readability fix(config.py): change default log file path from 'logs/telegram_scraper.log' to 'telegram_scraper.log' to match actual structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       - ./config:/app/config:ro
 
     ports:
-      - "5000:5000" # Web UI
+      - "5001:5000" # Web UI
 
     networks:
       - scraper-network
@@ -134,15 +134,7 @@ services:
     profiles:
       - production
 
-networks:
-  scraper-network:
-    driver: bridge
-
-volumes:
-  redis-data:
-    driver: local
-
-  # Development override
+  # Development override service
   telegram-scraper-dev:
     extends: telegram-scraper
     profiles:
@@ -155,3 +147,11 @@ volumes:
       - ./data:/app/data
       - ./logs:/app/logs
       - ./sessions:/app/sessions
+
+networks:
+  scraper-network:
+    driver: bridge
+
+volumes:
+  redis-data:
+    driver: local
