feat: add bot authentication support for telegram job scraper docs: add comprehensive bot setup guide and configuration template refactor: update config and telegram client to support both user and bot auth chore: update docker-compose to include bot token environment variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       # Telegram API Credentials (set these in .env file)
       - API_ID=${API_ID}
       - API_HASH=${API_HASH}
+      - AUTH_METHOD=${AUTH_METHOD:-user}
+      - BOT_TOKEN=${BOT_TOKEN}
       - PHONE_NUMBER=${PHONE_NUMBER}
 
       # Target Channels
