feat(docker): change Dockerfile CMD to continuous mode and use pre-built image feat(scripts): add run_background.sh for running scraper as background service feat(service): add systemd service file for telegram-scraper feat(filters): add resume/CV keywords filtering to RussianJobFilter docs(cron): add cron_setup.txt with cron job configuration examples test: add empty test files for public and single channel tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 
 services:
   telegram-scraper:
-    build: .
+    image: telegram-job-scraper:latest
     container_name: telegram-job-scraper
     restart: unless-stopped
     environment:
