--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Core dependencies for Telegram Job Scraper
-telethon>=1.34.0
+telethon>=1.40.0
 python-dotenv>=1.0.0
 flask>=3.0.0
+flask-cors>=4.0.0
 
 # Optional: Add these if you need them later
 # aiohttp>=3.8.5
